Explorando mais os fluxos e gerando estatísticas